Add feature to remove tasks

--- a/todo.ui
+++ b/todo.ui
@@ -85,6 +85,10 @@ SOFTWARE.
         <property name="can-focus">False</property>
         <property name="halign">center</property>
         <property name="valign">center</property>
+        <property name="margin-start">10</property>
+        <property name="margin-end">10</property>
+        <property name="margin-top">10</property>
+        <property name="margin-bottom">10</property>
         <child>
           <object class="GtkButtonBox">
             <property name="visible">True</property>
@@ -113,6 +117,9 @@ SOFTWARE.
                 <property name="can-focus">True</property>
                 <property name="receives-default">True</property>
                 <property name="halign">center</property>
+                <style>
+                  <class name="suggested-action"/>
+                </style>
               </object>
               <packing>
                 <property name="expand">True</property>
@@ -127,6 +134,9 @@ SOFTWARE.
                 <property name="can-focus">True</property>
                 <property name="receives-default">True</property>
                 <property name="halign">center</property>
+                <style>
+                  <class name="destructive-action"/>
+                </style>
               </object>
               <packing>
                 <property name="expand">True</property>
@@ -242,6 +252,9 @@ SOFTWARE.
             <property name="can-focus">True</property>
             <property name="receives-default">True</property>
             <signal name="clicked" handler="onAddTaskBtnClicked" swapped="no"/>
+            <style>
+              <class name="suggested-action"/>
+            </style>
           </object>
           <packing>
             <property name="pack-type">end</property>
@@ -273,13 +286,15 @@ SOFTWARE.
   </object>
   <object class="GtkListStore" id="taskListStore">
     <columns>
+      <!-- column-name Completed -->
+      <column type="GtkCellRendererToggle"/>
       <!-- column-name Task -->
       <column type="gchararray"/>
       <!-- column-name Description -->
       <column type="gchararray"/>
-      <!-- column-name Due Date -->
+      <!-- column-name Due -->
       <column type="gchararray"/>
-      <!-- column-name Task priority -->
+      <!-- column-name Priority -->
       <column type="gint"/>
     </columns>
   </object>
